--- a/src/layouts/ArticleTopLayout.astro
+++ b/src/layouts/ArticleTopLayout.astro
@@ -29,7 +29,7 @@ const repoUrl = collection === "projects" ? data.repoUrl : null
       <svg class="size-5 stroke-current">
         <use href="/ui.svg#calendar"/>
       </svg>
-      {formatDate(date)}
+      {date ? formatDate(date) : ''}
     </div>
     <div class="flex items-center gap-2">
       <svg class="size-5 stroke-current">
